
import React from 'react'
import { render, screen } from '@testing-library/react-native'
import MpxView from '../../../lib/runtime/components/react/mpx-view'
import MpxInlineText from '../../../lib/runtime/components/react/mpx-inline-text'
import { fireTap } from './helpers'

// Mock mpx-portal
jest.mock('../../../lib/runtime/components/react/mpx-portal', () => {
  // eslint-disable-next-line @typescript-eslint/no-var-requires
  const mockReact = require('react')
  // eslint-disable-next-line @typescript-eslint/no-var-requires
  return mockReact.forwardRef((props: any, ref: any) => {
    return mockReact.createElement('View', { ...props, ref })
  })
})

describe('MpxView', () => {
  // 基础渲染和样式测试
  it('should render with basic props and styles', () => {
    const { toJSON } = render(
      <MpxView
        testID="basic-view"
        style={{
          backgroundColor: '#f0f0f0',
          padding: 10,
          borderRadius: 5
        }}
      >
        <MpxInlineText>Basic content</MpxInlineText>
      </MpxView>
    )

    const viewElement = screen.getByTestId('basic-view')
    expect(viewElement).toBeTruthy()
    expect(toJSON()).toMatchSnapshot()
  })

  it('should handle nested views and complex structure', () => {
    const { toJSON } = render(
      <MpxView testID="nested-view" style={{ padding: 5 }}>
        <MpxView style={{ margin: 2 }}>
          <MpxInlineText>Nested content</MpxInlineText>
        </MpxView>
        <MpxInlineText>Sibling content</MpxInlineText>
      </MpxView>
    )

    const viewElement = screen.getByTestId('nested-view')
    expect(viewElement).toBeTruthy()
    expect(toJSON()).toMatchSnapshot()
  })

  // MPX 特有功能测试
  it('should handle MPX touch events', () => {
    const bindtap = jest.fn()
    const bindtouchstart = jest.fn()
    const bindtouchend = jest.fn()

    render(
      <MpxView
        testID="touchable-view"
        bindtap={bindtap}
        bindtouchstart={bindtouchstart}
        bindtouchend={bindtouchend}
      >
        <MpxInlineText>Touch me</MpxInlineText>
      </MpxView>
    )

    const viewElement = screen.getByTestId('touchable-view')
    fireTap(viewElement)

    expect(bindtouchstart).toHaveBeenCalledWith(expect.objectContaining({
      type: 'touchstart',
      detail: { x: 10, y: 20 }
    }))
    expect(bindtouchend).toHaveBeenCalledWith(expect.objectContaining({
      type: 'touchend',
      detail: { x: 10, y: 20 }
    }))
    expect(bindtap).toHaveBeenCalledWith(expect.objectContaining({
      type: 'tap',
      detail: { x: 10, y: 20 }
    }))
  })

  it('should handle background properties', () => {
    const { toJSON } = render(
      <MpxView
        testID="background-view"
        enable-background={true}
        enable-fast-image={true}
        style={{
          backgroundColor: '#ff0000',
          backgroundImage: 'linear-gradient(45deg, #ff0000 0%, #00ff00 100%)',
          borderRadius: 10
        }}
      >
        <MpxInlineText>Background content</MpxInlineText>
      </MpxView>
    )

    const viewElement = screen.getByTestId('background-view')
    expect(viewElement).toBeTruthy()
    expect(toJSON()).toMatchSnapshot()
  })

  // 布局和样式测试
  it('should handle flex layout properties', () => {
    const { toJSON } = render(
      <MpxView
        testID="flex-view"
        style={{
          display: 'flex',
          flexDirection: 'row',
          justifyContent: 'space-between',
          alignItems: 'center',
          flex: 1
        }}
      >
        <MpxInlineText>Item 1</MpxInlineText>
        <MpxInlineText>Item 2</MpxInlineText>
      </MpxView>
    )

    const viewElement = screen.getByTestId('flex-view')
    expect(viewElement).toBeTruthy()
    expect(toJSON()).toMatchSnapshot()
  })

  // Ref 转发测试
  it('should properly forward refs', () => {
    const ref = React.createRef()

    render(
      <MpxView ref={ref} testID="ref-view">
        <MpxInlineText>Ref content</MpxInlineText>
      </MpxView>
    )

    expect(ref.current).toBeTruthy()
  })

  // 可访问性测试
  it('should handle accessibility props', () => {
    render(
      <MpxView
        testID="accessible-view"
        accessible={true}
        accessibilityLabel="Test view"
        accessibilityRole="button"
      >
        <MpxInlineText>Accessible content</MpxInlineText>
      </MpxView>
    )

    const viewElement = screen.getByTestId('accessible-view')
    expect(viewElement).toBeTruthy()
    expect(viewElement.props.accessible).toBe(true)
    expect(viewElement.props.accessibilityLabel).toBe('Test view')
  })

  // 边界情况和异常处理测试
  it('should handle edge cases and null values', () => {
    const { rerender } = render(
      <MpxView testID="edge-view" style={undefined}>
        <MpxInlineText>Edge case content</MpxInlineText>
      </MpxView>
    )

    let viewElement = screen.getByTestId('edge-view')
    expect(viewElement).toBeTruthy()

    // 测试 null children
    rerender(
      <MpxView testID="edge-view">
        {null}
        <MpxInlineText>Valid content</MpxInlineText>
        {false}
      </MpxView>
    )

    viewElement = screen.getByTestId('edge-view')
    expect(viewElement).toBeTruthy()

    // 测试零值和负值样式
    rerender(
      <MpxView
        testID="edge-view"
        style={{
          width: 0,
          height: -1,
          margin: 0,
          padding: -5
        }}
      >
        <MpxInlineText>Zero/negative values</MpxInlineText>
      </MpxView>
    )

    viewElement = screen.getByTestId('edge-view')
    expect(viewElement).toBeTruthy()
  })

  // 背景图片功能测试
  it('should handle background image properties', () => {
    const { toJSON } = render(
      <MpxView
        testID="bg-image-view"
        enable-background={true}
        style={{
          width: 200,
          height: 200,
          backgroundImage: 'url(https://example.com/image.jpg)'
        }}
      >
        <MpxInlineText>Background image content</MpxInlineText>
      </MpxView>
    )

    const viewElement = screen.getByTestId('bg-image-view')
    expect(viewElement).toBeTruthy()
    expect(toJSON()).toMatchSnapshot('bg-image-view')
  })

  // 线性渐变背景测试
  it('should handle linear gradient backgrounds', () => {
    const { toJSON } = render(
      <MpxView
        testID="gradient-view"
        enable-background={true}
        style={{
          width: 300,
          height: 150,
          backgroundImage: 'linear-gradient(45deg, #ff0000 0%, #00ff00 50%, #0000ff 100%)'
        }}
      >
        <MpxInlineText>Gradient background</MpxInlineText>
      </MpxView>
    )

    const viewElement = screen.getByTestId('gradient-view')
    expect(viewElement).toBeTruthy()
    expect(toJSON()).toMatchSnapshot('gradient-view')
  })

  // 基础动画属性测试
  it('should handle basic animation properties', () => {
    const { toJSON } = render(
      <MpxView
        testID="animated-view"
        enable-animation={false} // 简化测试，不启用复杂动画
        style={{
          width: 100,
          height: 100,
          backgroundColor: '#ff0000'
        }}
      >
        <MpxInlineText>Animated content</MpxInlineText>
      </MpxView>
    )

    const viewElement = screen.getByTestId('animated-view')
    expect(viewElement).toBeTruthy()
    expect(toJSON()).toMatchSnapshot('animated-view')
  })

  // 悬停状态测试
  it('should handle hover states and timing', () => {
    const hoverStyle = {
      backgroundColor: '#00ff00',
      transform: [{ scale: 1.1 }]
    }

    const { toJSON } = render(
      <MpxView
        testID="hover-view"
        hover-style={hoverStyle}
        hover-start-time={100}
        hover-stay-time={200}
        style={{
          width: 100,
          height: 100,
          backgroundColor: '#ff0000'
        }}
      >
        <MpxInlineText>Hover me</MpxInlineText>
      </MpxView>
    )

    const viewElement = screen.getByTestId('hover-view')
    expect(viewElement).toBeTruthy()
    expect(toJSON()).toMatchSnapshot('hover-view')
  })

  // 基础 Portal 功能测试
  it('should handle Portal functionality', () => {
    const { toJSON } = render(
      <MpxView
        testID="portal-view"
        style={{ width: 100, height: 100, backgroundColor: '#f0f0f0' }}
      >
        <MpxInlineText>Portal view content</MpxInlineText>
      </MpxView>
    )

    const viewElement = screen.getByTestId('portal-view')
    expect(viewElement).toBeTruthy()
    expect(toJSON()).toMatchSnapshot('view-with-portal')
  })

  // 手势事件测试
  it('should handle comprehensive touch and gesture events', () => {
    const mockBindtouchstart = jest.fn()
    const mockBindtouchend = jest.fn()

    const { toJSON } = render(
      <MpxView
        testID="gesture-view"
        bindtouchstart={mockBindtouchstart}
        bindtouchend={mockBindtouchend}
        style={{ width: 100, height: 100 }}
      >
        <MpxInlineText>Gesture area</MpxInlineText>
      </MpxView>
    )

    const viewElement = screen.getByTestId('gesture-view')
    expect(viewElement).toBeTruthy()
    expect(toJSON()).toMatchSnapshot('gesture-view')
  })

  // 简化的上下文测试
  it('should handle external context properties', () => {
    const { toJSON } = render(
      <MpxView
        testID="context-view"
        style={{
          backgroundColor: '#007AFF',
          borderRadius: 8,
          padding: 16,
          margin: 12,
          width: 200,
          height: 100
        }}
      >
        <MpxInlineText>Context styled view</MpxInlineText>
      </MpxView>
    )

    const viewElement = screen.getByTestId('context-view')
    expect(viewElement).toBeTruthy()
    expect(toJSON()).toMatchSnapshot('context-view')
  })

  // 父级尺寸上下文测试
  it('should handle parent size context', () => {
    const { toJSON } = render(
      <MpxView
        testID="parent-size-view"
        parent-font-size={16}
        parent-width={400}
        parent-height={300}
        style={{
          width: 300, // 使用具体数值而不是百分比
          height: 150, // 使用具体数值而不是百分比
          fontSize: 24, // 使用具体数值而不是相对值
          padding: 10
        }}
      >
        <MpxInlineText>Parent size context view</MpxInlineText>
      </MpxView>
    )

    const viewElement = screen.getByTestId('parent-size-view')
    expect(viewElement).toBeTruthy()
    expect(toJSON()).toMatchSnapshot('parent-size-view')
  })

  // 复杂背景属性组合测试
  it('should handle complex background property combinations', () => {
    const { toJSON } = render(
      <MpxView
        testID="complex-bg-view"
        enable-background={true}
        enable-fast-image={true}
        style={{
          width: 300,
          height: 200,
          backgroundImage: 'linear-gradient(to right, rgba(255,0,0,0.5), rgba(0,255,0,0.5))',
          borderRadius: 10
        }}
      >
        <MpxInlineText>Complex background</MpxInlineText>
      </MpxView>
    )

    const viewElement = screen.getByTestId('complex-bg-view')
    expect(viewElement).toBeTruthy()
    expect(toJSON()).toMatchSnapshot('complex-bg-view')
  })

  // 布局变化和尺寸计算测试
  it('should handle layout changes and size calculations', () => {
    const mockOnLayout = jest.fn()

    const { rerender } = render(
      <MpxView
        testID="layout-view"
        onLayout={mockOnLayout}
        style={{
          width: 100,
          height: 100,
          backgroundColor: '#f0f0f0'
        }}
      >
        <MpxInlineText>Initial size</MpxInlineText>
      </MpxView>
    )

    let viewElement = screen.getByTestId('layout-view')
    expect(viewElement).toBeTruthy()

    // 改变尺寸
    rerender(
      <MpxView
        testID="layout-view"
        onLayout={mockOnLayout}
        style={{
          width: 200,
          height: 150,
          backgroundColor: '#f0f0f0'
        }}
      >
        <MpxInlineText>Changed size</MpxInlineText>
      </MpxView>
    )

    viewElement = screen.getByTestId('layout-view')
    expect(viewElement).toBeTruthy()
  })

  // 深度嵌套和复杂结构测试
  it('should handle deeply nested complex structures', () => {
    const { toJSON } = render(
      <MpxView testID="deep-nested-view" style={{ padding: 10 }}>
        <MpxView style={{ backgroundColor: '#ff0000', margin: 5 }}>
          <MpxInlineText>Level 1</MpxInlineText>
          <MpxView style={{ backgroundColor: '#00ff00', margin: 5 }}>
            <MpxInlineText>Level 2</MpxInlineText>
            <MpxView style={{ backgroundColor: '#0000ff', margin: 5 }}>
              <MpxInlineText>Level 3</MpxInlineText>
              <MpxView style={{ backgroundColor: '#ffff00', margin: 5 }}>
                <MpxInlineText>Level 4</MpxInlineText>
              </MpxView>
            </MpxView>
          </MpxView>
        </MpxView>
      </MpxView>
    )

    const viewElement = screen.getByTestId('deep-nested-view')
    expect(viewElement).toBeTruthy()
    expect(toJSON()).toMatchSnapshot('deep-nested-view')
  })

  // 边界条件和错误处理测试
  it('should handle boundary conditions and error cases', () => {
    const { rerender } = render(
      <MpxView
        testID="boundary-view"
        style={{
          width: 0, // 零宽度
          height: -1, // 负高度
          margin: null, // null 值
          padding: undefined // undefined 值
        }}
      >
        <MpxInlineText>Boundary case</MpxInlineText>
      </MpxView>
    )

    let viewElement = screen.getByTestId('boundary-view')
    expect(viewElement).toBeTruthy()

    const errorSpy = jest.spyOn(console, 'error').mockImplementation(() => undefined)

    rerender(
      <MpxView
        testID="boundary-view"
        enable-background={true}
        style={{
          backgroundImage: 'invalid-url',
          backgroundColor: 'invalid-color'
        }}
      >
        <MpxInlineText>Invalid properties</MpxInlineText>
      </MpxView>
    )

    viewElement = screen.getByTestId('boundary-view')
    expect(viewElement).toBeTruthy()
    expect(errorSpy).toHaveBeenCalledWith(expect.stringContaining('background use should be stable'))
    errorSpy.mockRestore()
  })

  // 性能优化相关测试
  it('should handle performance optimization features', () => {
    const { toJSON } = render(
      <MpxView
        testID="performance-view"
        enable-fast-image={true}
        enable-background={true}
        style={{
          width: 500,
          height: 500,
          backgroundImage: 'url(https://example.com/large-image.jpg)'
        }}
      >
        <MpxInlineText>Performance optimized view</MpxInlineText>
      </MpxView>
    )

    const viewElement = screen.getByTestId('performance-view')
    expect(viewElement).toBeTruthy()
    expect(toJSON()).toMatchSnapshot('performance-view')
  })
})
